correction and css font and spacing

--- a/wwr/styles/site-plan-css.css
+++ b/wwr/styles/site-plan-css.css
@@ -11,8 +11,8 @@ Fonts are separated by a & */
   --accent2-color: #D3CDD7;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Chewy";
-  --paragraph-font: "Work Sans", Helvetica, sans-serif;
+  --heading-font: Chewy;
+  --paragraph-font: Work Sans, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #BC9CB0;  /* headlines on a white background */ 
